// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`enums.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "as-needed"
                                                      printWidth: 80 (default) |
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  b = "b",
}

enum E3 {
  c1 = "c1",
  c2 = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "consistent"
                                                      printWidth: 80 (default) |
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  b = "b",
}

enum E3 {
  c1 = "c1",
  c2 = "c2",
}

enum E4 {
  "d1" = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  "b" = "b",
}

enum E3 {
  c1 = "c1",
  "c2" = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "as-needed"
                                                      printWidth: 80 (default) |
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  "new": number;
}

=====================================output=====================================
interface I1 {
  method(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  property: string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  new: number;
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "consistent"
                                                      printWidth: 80 (default) |
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  "new": number;
}

=====================================output=====================================
interface I1 {
  "method"(): string;
  "method2"(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  "property2": string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  new: number;
}

================================================================================
`;

exports[`interfaces.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  "new": number;
}

=====================================output=====================================
interface I1 {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

interface I2 {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
interface INewMethod {
  "new"(id: string): number;
}

// \`"new"\` as a property is safe to unquote.
interface INewProperty {
  "new": number;
}

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "as-needed"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  "new": number;
};

=====================================output=====================================
type T1 = {
  method(): string;
  method2(): string;
  "method-3"(): string;
};

type T2 = {
  property: string;
  property2: string;
  "property-3": string;
};

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  new: number;
};

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "consistent"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  "new": number;
};

=====================================output=====================================
type T1 = {
  "method"(): string;
  "method2"(): string;
  "method-3"(): string;
};

type T2 = {
  "property": string;
  "property2": string;
  "property-3": string;
};

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  new: number;
};

================================================================================
`;

exports[`type-literal.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
}

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
}

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  "new": number;
};

=====================================output=====================================
type T1 = {
  "method"(): string;
  method2(): string;
  "method-3"(): string;
};

type T2 = {
  "property": string;
  property2: string;
  "property-3": string;
};

// \`"new"\` as a method must stay quoted: \`new(…)\` would be a construct signature.
type TNewMethod = {
  "new"(id: string): number;
};

// \`"new"\` as a property is safe to unquote.
type TNewProperty = {
  "new": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "as-needed"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "consistent"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
quoteProps: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;
